fixed x-overflow

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 body{
   font-family: 'Signika', verdana;
   background-color: #000f19;
+  overflow-x: hidden;  
+
 }
 /* Navbar */
 .navBar {
@@ -16,7 +18,8 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 15px;
+  flex-wrap: wrap;
 }
 
 .logo{
@@ -49,6 +52,22 @@ body{
   text-decoration: 2px underline;
   text-decoration-color: #ffffef;
 }
+
+
+.home {
+  color: #fffaf9;
+  background: linear-gradient(120deg, #87CEFA, #006097a1, #003153);
+  background-repeat: no-repeat;
+  animation: gradientAnimation 10s ease infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+  padding: 30px;
+  background-color: #f0f0f0;
+  /* overflow: hidden; */
+}
+
 /* General styles for the home section */
 /* Styling the social buttons container */
 .social-buttons {
@@ -88,21 +107,6 @@ body{
   transform: translateY(-5px);
   opacity: 0.8;
 }
-
-.home {
-  color: #fffaf9;
-  background: linear-gradient(120deg, #87CEFA, #006097a1,  #003153);
-  background-size: cover;
-  background-repeat: no-repeat;
-  animation: gradientAnimation 10s ease infinite;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70vh;
-  padding: 30px;
-  background-color: #f0f0f0;
-}
-
 
 /* Text details */
 #details {
@@ -343,13 +347,8 @@ footer {
   margin-top: 20px;
 }
 @media screen and (max-width: 600px) {
-  .navBar {
-    float: none;
-    width: 100%;
-  }
-}
-@media (max-width: 700px) {
-  body {   
+  .nav-links {
     flex-direction: column;
+    align-items: flex-start;
   }
 }
